src/objects/Apttus_Config2__BannerSettings__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__BannerMessageContext__c</fullName>
        <description>Identifies message fragments to display on intermediate page. The &apos;Progressbar&apos; context displays right below the progress bar and &apos;Marketing&apos; context display at the middle of the page.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Allow values:
Progressbar
Marketing

If the page context is &apos;Progressbar&apos;, BannerType must be &apos;CustomLabel&apos;</inlineHelpText>
        <label>BannerMessageContext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BannerPageContext__c</fullName>
        <description>Identifies intermediate page to display revevant progressbar, marketing messages</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Allowed values:
Pricing
Catalog</inlineHelpText>
        <label>BannerPageContext</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BannerSource__c</fullName>
        <description>Display content - text/image URL</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BannerSource</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BannerType__c</fullName>
        <description>Type of banner display type. Allowed values are ImageURL, CustomLabel - a display helper property</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Allowed values: 
ImageURL
CustomLabel</inlineHelpText>
        <label>BannerType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>